--- a/public/styles.css
+++ b/public/styles.css
@@ -1,30 +1,40 @@
 * {
-  box-sizing:border-box;
-  -webkit-box-sizing:border-box;
-  padding:0;
-  margin:0;
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  font-family: "monospace";
 }
 
 .btn-container {
-  position: absolute; 
-  display: flex; 
-  flex-direction: column; 
-  top:50%; 
-  left:0; 
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  top: 50%;
+  left: 0;
   transform: translate(0%, -50%);
-  background: white; 
-  border-radius: 0 10px 10px 0; 
+  background: white;
+  border-radius: 0 10px 10px 0;
   padding: 0 0px 0px 0px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
 }
 
 .btn {
   background: white;
-  outline: 1px solid #333; 
-  height: 40px; 
-  width: 80px; 
+  outline: 1px solid #333;
+  height: 40px;
+  width: 80px;
   border: none;
   cursor: pointer;
 }
+
+.btn.active {
+  font-weight: bold;
+}
+
 .btn:hover {
   font-weight: bold;
 }
@@ -34,4 +44,99 @@
 }
 .ml-2 {
   margin-left: 0.75rem;
+}
+
+.mode-container {
+  position: absolute;
+  top: 10px;
+  left: 50%;
+  transform: translate(-50%, 0);
+  display: flex;
+  gap: 10px;
+}
+
+#room-code {
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+#clash-mode {
+  position: absolute;
+  top: 50px;
+  right: 10px;
+  color: #888;
+  font-size: 0.8em;
+}
+
+#timer,
+#score {
+  margin-bottom: 10px;
+}
+
+#result {
+  font-size: 1.2em;
+  font-weight: bold;
+}
+
+.join-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  transform: translate(0, 0);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+}
+
+.join-container .btn {
+  background: white;
+  outline: 1px solid #333;
+  height: 40px;
+  width: 100px;
+  border: none;
+  cursor: pointer;
+}
+
+.join-container .btn:hover {
+  font-weight: bold;
+}
+
+.join-container input {
+  height: 40px;
+  padding: 0 10px;
+  border: 1px solid #333;
+}
+.mode-container button {
+  width: 100px;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  background-color: lightgray;
+  cursor: pointer;
+}
+
+.mode-container button.active {
+  background-color: darkgray;
+}
+.mode-container button:hover {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+  transition: all 0.5s cubic-bezier(0.25, 0.45, 0.45, 0.95);
+}
+.mode-container button:not(:hover) {
+  transition: all 0.5s cubic-bezier(0.25, 0.45, 0.45, 0.95);
+}
+
+.header {
+  position: absolute;
+  top: 2rem;
+  left: 50%;
+  transform: translate(-50%, 0);
+  display: flex;
+  justify-content: center;
+  gap: 10px;
+  width: 100%;
 }
