--- a/public/styles.css
+++ b/public/styles.css
@@ -109,21 +109,45 @@
 .join-container {
   position: fixed;
   width: 100%;
-  top: 10rem;
-  left: 1.5rem;
-  transform: translate(0, 0);
-  display: grid;
-  grid-template-columns: auto auto;
-  grid-gap: 10px;
+  top: 10%;
+  left: 50%;
+  transform: translate(-50%, 0);
+  display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
-.join-container .btn-group {
-  display: grid;
-  margin: 20px 0;
-  grid-template-columns: auto auto auto;
-  grid-gap: 10px;
+.join-container .collab-btn-group {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin: 13vh 0;
+}
+
+.btn-group {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 40vh 0;
+}
+
+.join-container .btn-group input {
+  width: 100%;
+  max-width: 300px;
+  height: 40px;
+  padding: 0 10px;
+  border: 1px solid #333;
+  margin-bottom: 10px;
 }
 
 .join-container .btn-group .btn {
@@ -146,7 +170,37 @@
   padding: 0 10px;
   border: 1px solid #333;
 }
+.utilities-menu {
+  position: relative; /* Add this line */
+}
 
+.utility-options {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  transform: scale(0);
+  transition: transform 0.5s ease-in-out;
+}
+
+.utility-options .btn {
+  transform-origin: top center;
+}
+
+.utility-options .btn:nth-child(1) {
+  transform: rotate(75deg) translateY(-2rem);
+}
+
+.utility-options .btn:nth-child(2) {
+  transform: rotate(90deg) translateY(-2rem);
+}
+
+.utility-options .btn:nth-child(3) {
+  transform: rotate(105deg) translateY(-2rem);
+}
+
+.utility-options .btn:nth-child(4) {
+  transform: rotate(120deg) translateY(-2rem);
+}
 .mode-container button {
   background: white;
   outline: 1px solid #333;
